--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:500|Rubik&display=swap');
+
 body {
   background-color: #414c50;
   margin: 0;
