style: update fonts

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:500|Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Rubik|Karla&display=swap');
 
 body {
   background-color: #414c50;
